add stylesheet to recipe project

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/mac-and-cheese.html">Homemade Mac and Cheese Recipe</a>
+        <a href="./recipes/mac-and-cheese.html" class="recipe-link" id="mac-and-cheese">Homemade Mac and Cheese Recipe</a>
 
         <br>
-        <a href="./recipes/ground-beef-casserole.html">Ground Beef Casserole Recipe</a>
+        <a href="./recipes/ground-beef-casserole.html" class="recipe-link" id="ground-beef-casserole">Ground Beef Casserole Recipe</a>
 
         <br>
-        <a href="./recipes/pasta-salad.html">Pasta Salad Recipe</a>
+        <a href="./recipes/pasta-salad.html" class="recipe-link" id="pasta-salad">Pasta Salad Recipe</a>
     </body>
 </html>
