add more styling to recipe pages

--- a/odin-recipes/recipes/ground-beef-casserole.html
+++ b/odin-recipes/recipes/ground-beef-casserole.html
@@ -3,34 +3,40 @@
     <head>
         <meta charset="UTF-8">
         <title>Ground Beef Casserole Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>Ground Beef Casserole</h1>
 
-        <img src="../images/ground-beef-casserole.jpg" alt="ground beef casserole">
+        <div class="imgwrap">
+            <img src="../images/ground-beef-casserole.jpg" alt="ground beef casserole" class="main-image">
+        </div>
+        
 
-        <h2>Description</h2>
-        <p>Old-fashioned hamburger casserole is comfort food at its best! Simple recipe featuring ground beef, noodles and a creamy cheese sauce.</p>
+        <div class="recipe-text">
+            <h2>Description</h2>
+            <p>Old-fashioned hamburger casserole is comfort food at its best! Simple recipe featuring ground beef, noodles and a creamy cheese sauce.</p>
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li>Ground beef</li>
-            <li>Tomato sauce</li>
-            <li>Seasonings</li>
-            <li>Pasta</li>
-            <li>Sour cream</li>
-            <li>Cream cheese</li>
-            <li>Onion</li>
-            <li>Cheddar cheese</li>
-        </ul>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Ground beef</li>
+                <li>Tomato sauce</li>
+                <li>Seasonings</li>
+                <li>Pasta</li>
+                <li>Sour cream</li>
+                <li>Cream cheese</li>
+                <li>Onion</li>
+                <li>Cheddar cheese</li>
+            </ul>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>Cook and season the ground beef</li>
-            <li>Cook egg noodles</li>
-            <li>Mix sour cream and cream cheese</li> 
-            <li>Assemble and Bake</li>
-        </ol>
+            <h2>Steps</h2>
+            <ol>
+                <li>Cook and season the ground beef</li>
+                <li>Cook egg noodles</li>
+                <li>Mix sour cream and cream cheese</li> 
+                <li>Assemble and Bake</li>
+            </ol>
+        </div>
     </body>
 </html>
