--- a/odin-recipes/recipes/mac-and-cheese.html
+++ b/odin-recipes/recipes/mac-and-cheese.html
@@ -3,14 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Mac and Cheese Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Mac and Cheese</h1>
     
-        <img src="../images/mac-and-cheese-image.webp" alt="macaroni and cheese">
+        <div class="imgwrap">
+            <img src="../images/mac-and-cheese-image.webp" alt="macaroni and cheese" class="main-image">
+        </div>
+        
 
         <br>
 
+       <div class="recipe-text">
         <h2>Description</h2>
         <p>Classic baked mac and cheese recipe with a buttered bread crumb topping. Creamy, comforting and easy to make.</p>
 
@@ -32,5 +37,6 @@
             <li>Melt two tablespoons of butter in a skillet, add the breadcrumbs and toast until the crumbs are brown. Spread this topping over the mac and cheese.</li>
             <li>Bake in a preheated oven until the topping is golden brown.</li>
         </ol>
+       </div>
     </body>
 </html>
