--- a/odin-recipes/recipes/pasta-salad.html
+++ b/odin-recipes/recipes/pasta-salad.html
@@ -3,34 +3,39 @@
     <head>
         <meta charset="UTF-8">
         <title>Pasta Salad Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>Pasta Salad</h1>
-
-        <img src="../images/pasta-salad.jpg" alt="pasta salad in a bowl">
+        <div class="imgwrap">
+            <img src="../images/pasta-salad.jpg" alt="pasta salad in a bowl">
+        </div>
+            
         
-        <h2>Description</h2>
-        <p>Pasta salad recipe featuring bell peppers, cherry tomatoes and olives. Great for barbecues!</p>
+        <div class="recipe-text">
+            <h2>Description</h2>
+            <p>Pasta salad recipe featuring bell peppers, cherry tomatoes and olives. Great for barbecues!</p>
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li>Tri-colored spiral pasta</li>
-            <li>Italian-style salad dressing</li>
-            <li>Salad seasoning mix</li>
-            <li>Cherry tomatoes</li>
-            <li>Bell peppers (green, red and yellow)</li>
-            <li>Black olives</li>
-        </ul>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Tri-colored spiral pasta</li>
+                <li>Italian-style salad dressing</li>
+                <li>Salad seasoning mix</li>
+                <li>Cherry tomatoes</li>
+                <li>Bell peppers (green, red and yellow)</li>
+                <li>Black olives</li>
+            </ul>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>Cook pasta until tender in a pot of lightly salted boiling water</li>
-            <li>Rinse cooked pasta under cold water and drain</li>
-            <li>Whisk Italian dressing and salad spice mix together until smooth</li>
-            <li>Combine pasta, tomatoes, olives and peppers in a bowl</li>
-            <li>Mix dressing into the salad and toss to coat</li>
-            <li>Refrigerate salad for at least 8 hours</li>
-        </ol>
+            <h2>Steps</h2>
+            <ol>
+                <li>Cook pasta until tender in a pot of lightly salted boiling water</li>
+                <li>Rinse cooked pasta under cold water and drain</li>
+                <li>Whisk Italian dressing and salad spice mix together until smooth</li>
+                <li>Combine pasta, tomatoes, olives and peppers in a bowl</li>
+                <li>Mix dressing into the salad and toss to coat</li>
+                <li>Refrigerate salad for at least 8 hours</li>
+            </ol>
+        </div>
     </body>
 </html>
