update landingpage project

--- a/odin-landingpage/index.html
+++ b/odin-landingpage/index.html
@@ -6,7 +6,69 @@
     <title>My First Webpage</title>
   </head>
 
-  <body>
-    <h1>Hello World!</h1>
+  <body style="font-family: Roboto">
+    <div class="container">
+      <div class="navbar">
+        <img src="./images/GlassiqueLogo.jpeg" alt="Glassique Logo" />
+        <ul>
+          <li>About</li>
+          <li>Shop</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+
+      <div class="content">
+        <div class="first-section">
+          <div class="first-section-text">
+            <p class="glassique-main-header">Glassique Studio</p>
+            <p class="first-section-subtext">
+              Glassique Studio specializes in making custom glass artwork.
+              Upload your photo and choose your dimensions, and we will take
+              care of the rest.
+            </p>
+          </div>
+        </div>
+
+        <div class="second-section">
+          <p class="second-section-text">
+            Any image can be printed on a sheet of glass. Need inspiration? Try
+            one of these.
+          </p>
+          <div class="second-section-images">
+            <img src="./images/Bubble.jpg" alt="bubble" />
+            <img src="./images/IDK.jpg" alt="IDK" />
+            <img src="./images/Waterfall.jpg" alt="waterfall" />
+            <img src="./images/Diamond.jpg" alt="diamond" />
+          </div>
+        </div>
+
+        <div class="third-section">
+          <div class="review">
+            <p>
+              I use Glassique to create gifts for loved ones all the time.
+              Everyone loves their creations!
+            </p>
+            <p>- Thomas, Toronto</p>
+          </div>
+
+          <div class="review">
+            <p>Glassique is great. Fast shipping and excellent products.</p>
+            <p>- Aneil, Mississauga</p>
+          </div>
+
+          <div class="review">
+            <p>
+              High quality prints at a great price. Makes great art displays for
+              the home.
+            </p>
+            <p>- Asher, Mississauga</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer">
+        <p>Copyright @ Glassique</p>
+      </div>
+    </div>
   </body>
 </html>
